--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="text-sm text-gray-600">
+<!-- <footer class="text-sm text-gray-600">
   <div class="container grid items-center gap-5 py-8 sm:flex sm:gap-10">
     <a
       href="https://astro.build"
@@ -161,4 +161,4 @@
       Powered by Shopify
     </div>
   </div>
-</footer>
+</footer> -->
